# lhc-python

./: .gitignore  .travis.yml  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: python-package.yml  test-and-deploy.yml
lhc/binf/: genetic_code.py  genomic_feature.py  sequence.py  sequence_generator.py  stats.py
lhc/binf/feature/: ens.py  (+5 more)
lhc/collections/: __init__.py  interval_map.py  interval_set.py  sorted_dict.py  sorted_list.py  tracked_map.py  tracked_set.py
lhc/entities/: __init__.py
lhc/filetools/: __init__.py  filepool.py  shared_connection.py  shared_file.py  shared_filepool.py
lhc/graph/: graph.py  hyper_graph.py  n_partite_graph.py
lhc/indices/: tbi.py
lhc/interval/: binner.py  interval.py
lhc/io/: BasePairProbabilityMatrix.py  DeflineParser.py  MapFile.py  OboFile.py  SwissProtFile.py  __init__.py  aln.py  bed.py  entry_set.py  generif.py  gff.py  gtf.py  header.py  id_map.py  methpat.py  obo.py  orpha.py  region.py
lhc/itertools/: merge_sorted.py  sorted_iterator_merger.py
lhc/misc/: argparse.py  string.py  tools.py
lhc/random/: reservoir.py
lhc/tools/: __init__.py  sorter.py  tokeniser.py
lib/bitap/: bitap.cpp  bitap.h  bitapmodule.cpp
tests/: run_test_random.py
tests/test_binf/: test_genetic_code.py  test_sequence_generator.py
tests/test_collections/: test_inorder_access_interval_set.py  test_interval_map.py  test_interval_set.py  test_multi_dimension_map.py
tests/test_graph/: test_directed_graph.py  test_graph.py
tests/test_interval/: test_interval.py
tests/test_itertools/: test_merge_sorted.py
(+280 files in other folders)
